# AgnosticPyUI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_gradio_debug.py
application/: __init__.py  service.py
domain/: __init__.py  exceptions.py  models.py
tests/: test_gradio_ui.py  test_streamlit_ui.py
ui_core/: __init__.py  app_builder.py  gradio_ui.py  interfaces.py  streamlit_ui.py
